# OSPSD-Spring-26

./: .env.example  .gitignore  DESIGN.md  Dockerfile  Greetings.txt  LICENSE  PLAN_OF_ACTION.md  README.md  gen_openapi.py  main.py  mkdocs.yml  openapi.json  pull_request_template.md  pyproject.toml  render.yaml
.circleci/: config.yml
.github/: pull_request_template.md
.github/Issue_Template/: bug_report.md  feature_request.md
components/ai_client_api/: README.md  pyproject.toml
components/ai_client_api/src/ai_client_api/: __init__.py  client.py  models.py
components/ai_client_api/tests/: test_ai_client_api.py
components/chat_client_wrapper/: pyproject.toml
components/chat_client_wrapper/src/chat_client_wrapper/: __init__.py  notifications.py  wrapper.py
components/chat_client_wrapper/tests/: test_wrapper.py
components/cloud_storage_adapter/: README.md  pyproject.toml
components/cloud_storage_adapter/src/cloud_storage_adapter/: __init__.py  adapter.py
components/cloud_storage_adapter/tests/: test_adapter_di.py  test_adapter_edge_cases.py  test_adapter_integration.py  test_adapter_operations.py  test_di_coverage.py
components/cloud_storage_client_api/: README.md  pyproject.toml
components/cloud_storage_client_api/src/cloud_storage_client_api/: __init__.py  client.py  di.py  exceptions.py  models.py
components/cloud_storage_client_api/tests/: __init__.py  test_client_api.py  test_exceptions.py  test_get_client.py  test_interface_contract_hw3.py
components/cloud_storage_client_impl/: pyproject.toml
components/cloud_storage_client_impl/src/cloud_storage_client_impl/: __init__.py  client.py
components/cloud_storage_service/: README.md  pyproject.toml  run.sh
components/cloud_storage_service/src/cloud_storage_service/: __init__.py  auth.py  main.py  models.py  sessions.py  slack_adapter.py
components/cloud_storage_service/src/cloud_storage_service/middleware/: __init__.py  telemetry.py
components/cloud_storage_service/tests/: __init__.py  conftest.py  test_ai_chat.py  test_auth.py  test_health.py  test_integration_ai_chat.py  test_integration_ai_storage.py  test_integration_ai_to_chat.py  test_service_edge_cases.py  test_slack_adapter.py  test_storage.py
components/cloud_storage_service_api_client/: README.md  pyproject.toml
components/cloud_storage_service_api_client/cloud_storage_service_api_client/: __init__.py
components/cloud_storage_service_api_client/cloud_storage_service_api_client/api/ai/: ai_chat_ai_chat_post.py
components/cloud_storage_service_api_client/cloud_storage_service_api_client/api/authentication/: logout_auth_logout_post.py  oauth_callback_auth_callback_get.py  oauth_login_auth_login_post.py
components/cloud_storage_service_api_client/cloud_storage_service_api_client/api/health/: health_check_health_get.py  root_get.py
components/cloud_storage_service_api_client/cloud_storage_service_api_client/api/monitoring/: metrics_metrics_get.py
components/cloud_storage_service_api_client/cloud_storage_service_api_client/api/storage/: delete_object_delete_key_delete.py  download_file_download_key_get.py  head_object_head_key_get.py  list_objects_list_get.py  upload_file_upload_post.py
components/cloud_storage_service_api_client/cloud_storage_service_api_client/models/: __init__.py  ai_chat_ai_chat_post_response_ai_chat_ai_chat_post.py  body_ai_chat_ai_chat_post.py  body_upload_file_upload_post.py  health_response.py  health_response_status.py  http_validation_error.py  list_response.py  o_auth_callback_response.py  o_auth_login_response.py  object_info_response.py  object_info_response_metadata_type_0.py  root_get_response_root_get.py  validation_error.py  validation_error_context.py
components/gcp_client_impl/: README.md  pyproject.toml
components/gcp_client_impl/src/gcp_client_impl/: __init__.py  client.py
components/gcp_client_impl/tests/: test_config.py  test_credentials.py  test_edge_cases.py  test_error_mapping.py  test_object_info.py  test_operations.py  test_registration.py  test_storage_client.py
components/gemini_ai_client_impl/: README.md  pyproject.toml
components/gemini_ai_client_impl/src/gemini_ai_client_impl/: __init__.py  client.py  tools.py
components/gemini_ai_client_impl/tests/: test_gemini_client.py  test_tools.py
docs/: CONTRIBUTING.md  circleci-setup.md  cloud-storage-client.md  deployment.md  design.md  gcp-impl.md  index.md  observability.md  structure.md  testing.md
docs/components/: ai_client_api.md  chat_client_wrapper.md  cloud_storage_adapter.md  cloud_storage_client_api.md  cloud_storage_service_api_client.md  gcp_client_impl.md  gemini_ai_client_impl.md
infrastructure/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
monitoring/: Dockerfile.grafana  Dockerfile.prometheus  grafana-dashboard-provider.yml  grafana-datasource.yml  grafana_dashboard.json  prometheus-local.yml  prometheus.yml
scripts/: __init__.py  apply_generator_patches.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_e2e.py  test_e2e_workflow.py  test_full_workflow.py
tests/integration/: conftest.py  test_ai_chat_flow.py  test_ai_storage_flow.py  test_di.py  tests_di.py
tests/mocks/: __init__.py  mock_ai_client.py  mock_chat_client.py
