[project]
name = "ospsd-spring-26"
version = "0.1.0"
description = "Cloud Storage Client with GCP Implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# ============================================
# DEPENDENCY GROUPS
# ============================================
[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "mypy>=1.17.0",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",
    "google-api-python-client-stubs>=1.30.0",
    "openapi-python-client>=0.28.3",
    "cloud-storage-api",
    "gcp-client-impl",
    "cloud-storage-service",
    "cloud-storage-adapter",
    "ai-client-api",
    "gemini-ai-client-impl",
    "chat-client-wrapper",
]

# ============================================
# UV WORKSPACE CONFIGURATION
# ============================================
[tool.uv.workspace]
members = [
    "components/ai_client_api",
    "components/chat_client_wrapper",
    "components/cloud_storage_adapter",
    "components/cloud_storage_service",
    "components/gcp_client_impl",
    "components/gemini_ai_client_impl",
]

[tool.uv.sources]
cloud-storage-api = { git = "https://github.com/2SpaceMasterRace/ospsd-cloud-storage.git", tag = "v1.0.0" }
chat-client-api = { git = "https://github.com/HarshithKoriRaj/Shared-API.git", tag = "v0.1.0" }
gcp-client-impl = { workspace = true }
cloud-storage-service = { workspace = true }
cloud-storage-adapter = { workspace = true }
ai-client-api = { workspace = true }
gemini-ai-client-impl = { workspace = true }
chat-client-wrapper = { workspace = true }

# ============================================
# RUFF CONFIGURATION
# ============================================
[tool.ruff]
line-length = 130
target-version = "py312"
exclude = [
    "components/cloud_storage_service_api_client/**",
    ".venv",
    "**/.venv",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "D203",    # one-blank-line-before-class - Conflicts with D211
    "D213",    # multi-line-summary-second-line - Conflicts with D212
    "COM812",  # missing-trailing-comma - Conflicts with formatter
    "ISC001",  # single-line-implicit-string-concatenation - Conflicts with formatter
    "FAST002", # FastAPI dependency injection pattern - intentional
    "B008",    # FastAPI dependency injection pattern - intentional
]

[tool.ruff.lint.per-file-ignores]
"main.py" = [
    "E402",     # imports after path bootstrap - intentional
    "BLE001",   # blind exception in sanity check - intentional
    "T201",     # print equivalent - sys.stdout.write for demo output
    "F401",     # unused imports - DI registration triggers side effects
    "TC002",    # CloudStorageClient needed at runtime for FastAPI dependency injection
]

"tests/**/*.py" = [
    "S101",     # assert - required for pytest
    "D102",     # docstrings in methods - not required in tests
    "D103",     # docstrings in functions - not required in tests
    "ANN",      # annotations - less critical in tests
    "SLF001",   # private member access - OK for testing internals
    "INP001",   # implicit namespace - tests/ has no init.py
    "S105",     # hardcoded password - test credentials are fine
    "S106",     # hardcoded password - test credentials are fine
    "ARG001",   # unused arg - pytest fixtures
    "ARG002",   # unused method arg - pytest fixtures
    "ARG005",   # unused lambda arg - test mocks have required signatures
    "TRY300",   # consider moving statement - test-specific patterns
    "BLE001",   # blind exception - acceptable in tests
    "PLC0415",  # import outside toplevel - OK in tests
    "PLR2004",  # magic values - acceptable in tests
    "PLW0108",  # lambda in tests - acceptable
    "TC003",    # Generator needed at runtime for pytest fixtures
    "F401",     # Can have unused imports in TYPE_CHECKING
    "S603",     # subprocess call - test automation is intentional
]

"components/**/tests/**/*.py" = [
    "S101",     # assert - required for pytest
    "D102",     # docstrings in methods - not required in tests
    "D103",     # docstrings in functions - not required in tests
    "ANN",      # annotations - less critical in tests
    "SLF001",   # private member access - OK for testing internals
    "INP001",   # implicit namespace - tests/ has no init.py
    "S105",     # hardcoded password - test credentials are fine
    "S106",     # hardcoded password - test credentials are fine
    "ARG001",   # unused arg - pytest fixtures
    "ARG002",   # unused method arg - pytest fixtures
    "ARG005",   # unused lambda arg - test mocks have required signatures
    "TRY300",   # consider moving statement - test-specific patterns
    "BLE001",   # blind exception - acceptable in tests
    "PLC0415",  # import outside toplevel - OK in tests
    "PLR2004",  # magic values - acceptable in tests
    "PLW0108",  # lambda in tests - acceptable
    "TC003",    # Generator needed at runtime for pytest fixtures
    "F401",     # Can have unused imports in TYPE_CHECKING
    "DTZ005",   # datetime without timezone - test mocks
    "FURB162",  # timezone replacement - test code
    "S603",     # subprocess call - test automation is intentional
    "S108",     # insecure temp files - test fixtures are fine
    "PLR0913",  # too many args - test helper functions
]

"**/gcp_client_impl/**/*.py" = [
    "ANN401",   # Any typing - necessary for external Google Cloud library objects without complete stubs
]

"**/cloud_storage_service/**/*.py" = [
    "ANN401",   # Any typing - necessary for FastAPI request/response objects
    "PLC0415",  # import inside function - intentional for performance/circular imports
    "E402",     # module import not at top - intentional after env setup
    "S105",     # possible hardcoded password - false positive for URLs/constants
    "ARG001",   # unused function argument - FastAPI exception handler signature
    "TRY301",   # abstract raise - FastAPI error handling pattern
    "PLR2004",  # magic value in comparison - HTTP status codes
    "DTZ005",   # datetime without timezone - acceptable for API responses
    "TC003",    # move into type-checking block - runtime usage in Pydantic
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ============================================
# MYPY CONFIGURATION
# ============================================
[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
warn_unused_ignores = true
ignore_missing_imports = false
exclude = [
    "components/cloud_storage_service_api_client/.*",
]

# Paths where mypy should look for packages
mypy_path = [
    "components/gcp_client_impl/src",
    "components/cloud_storage_service/src",
    "components/cloud_storage_service_api_client",
    "components/cloud_storage_adapter/src",
    "components/ai_client_api/src",
    "components/gemini_ai_client_impl/src",
    "components/chat_client_wrapper/src",
]

# Google Cloud libraries: google-api-python-client-stubs is installed for googleapiclient
# Override for google.cloud.* and google.auth.* which may have incomplete stubs
[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "google.auth.*",
    "google.oauth2.*",
]
ignore_missing_imports = true

# Pytest fixtures don't have type hints
[[tool.mypy.overrides]]
module = ["tests.*", "components.*.tests.*"]
disallow_untyped_decorators = false

# Auto-generated client: openapi-python-client output has incomplete type annotations
[[tool.mypy.overrides]]
module = ["cloud_storage_service_api_client.*", "components.cloud_storage_service_api_client.*"]
ignore_errors = true

# External chat-client-api from Shared-API repo: no type stubs available
[[tool.mypy.overrides]]
module = ["chat_client_api", "chat_client_api.*"]
follow_imports = "skip"
ignore_errors = true

# Files that import chat_client_api (untyped external dependency)
[[tool.mypy.overrides]]
module = [
    "cloud_storage_service.main",
    "cloud_storage_service.tests.conftest",
    "components.cloud_storage_service.main",
    "components.cloud_storage_service.tests.conftest",
]
disable_error_code = ["import-untyped"]

# ============================================
# PYTEST CONFIGURATION
# ============================================
[tool.pytest.ini_options]
pythonpath = [
    ".",
    "components/cloud_storage_adapter",
    "components/gcp_client_impl/src",
    "components/cloud_storage_service/src",
    "components/cloud_storage_service_api_client",
    "components/cloud_storage_adapter/src",
]
testpaths = ["tests", "components/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=components/ai_client_api/src/",
    "--cov=components/gemini_ai_client_impl/src/",
    "--cov=components/chat_client_wrapper/src/",
    "--cov-report=term-missing",
]

markers = [
    "unit: Unit tests (fast, isolated, mocked)",
    "integration: Integration tests (service layer with mocked external APIs like Gemini, GCP, Chat)",
    "e2e: End-to-end tests (slow, full system with real APIs)",
    "circleci: Tests runnable in CI without local credential files",
    "local_credentials: Tests requiring a local service account key file",
]

# ============================================
# COVERAGE CONFIGURATION
# ============================================
[tool.coverage.run]
source = [
    "components/ai_client_api/src",
    "components/gemini_ai_client_impl/src",
    "components/chat_client_wrapper/src",
]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "components/cloud_storage_service_api_client/**/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*pass\\s*$",
    "@abstractmethod",
]
omit = [
    "components/cloud_storage_service_api_client/**/*",
]
skip_covered = false
precision = 2