[project]
name = "ospsd-spring-26"
version = "0.1.0"
description = "Cloud Storage Client with GCP Implementation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = []  # workspace shell — components carry their own runtime deps

# ============================================================================
# Dependency groups
# ============================================================================
[dependency-groups]
dev = [
    # Workspace + git deps (so uv sync resolves them at the root level)
    "ai-client-api",
    "chat-client-wrapper",
    "cloud-storage-adapter",
    "cloud-storage-api",
    "cloud-storage-service",
    "gcp-client-impl",
    "gemini-ai-client-impl",
    # Tooling
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "mypy>=1.17.0",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.12.7",
    "types-requests>=2.32.4.20250611",
    "google-api-python-client-stubs>=1.30.0",
    "openapi-python-client>=0.28.3",
]

# ============================================================================
# uv workspace
# ============================================================================
[tool.uv.workspace]
members = [
    "components/ai_client_api",
    "components/chat_client_wrapper",
    "components/cloud_storage_adapter",
    "components/cloud_storage_service",
    "components/gcp_client_impl",
    "components/gemini_ai_client_impl",
    "components/cloud_storage_service_api_client",

]

[tool.uv.sources]
cloud-storage-api = { git = "https://github.com/2SpaceMasterRace/ospsd-cloud-storage.git", tag = "v1.0.0" }
chat-client-api = { git = "https://github.com/HarshithKoriRaj/Shared-API.git", rev = "ebb37e189065760f2090f1488d376485b7b56b20" }
ai-client-api = { workspace = true }
chat-client-wrapper = { workspace = true }
cloud-storage-adapter = { workspace = true }
cloud-storage-service = { workspace = true }
gcp-client-impl = { workspace = true }
gemini-ai-client-impl = { workspace = true }
cloud-storage-service-api-client = { workspace = true }


# ============================================================================
# Ruff — hyper-strict linting
# ============================================================================
[tool.ruff]
line-length = 130
target-version = "py312"
exclude = [
    "components/cloud_storage_service_api_client/**",
    ".venv",
    "**/.venv",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "FAST002", # FastAPI dependency injection pattern - intentional
    "B008",    # FastAPI Depends() in defaults - intentional
]

[tool.ruff.lint.per-file-ignores]
"main.py" = [
    "E402",     # imports after path bootstrap - intentional
    "BLE001",   # blind exception in sanity check - intentional
    "T201",     # print equivalent - sys.stdout.write for demo output
]

"tests/**/*.py" = [
    "S101",     # assert in tests is fine
    "D102",     # docstrings in test methods - not required
    "D103",     # docstrings in test functions - not required
    "ANN",      # annotations - less critical in tests
    "SLF001",   # private member access - OK for testing internals
    "INP001",   # implicit namespace - tests/ has no init.py
    "S105",     # hardcoded "passwords" in tests are fixtures
    "S106",     # hardcoded "secrets" in tests are fixtures
    "S108",     # /tmp paths in tests are not security risks
    "S603",     # subprocess call - test automation is intentional
    "ARG001",   # unused arg - pytest fixtures
    "ARG002",   # unused method arg - pytest fixtures
    "ARG005",   # unused lambda arg - test mocks
    "TRY300",   # consider moving statement - test-specific patterns
    "BLE001",   # blind exception - acceptable in tests
    "PLC0415",  # import outside toplevel - OK in tests
    "PLR0913",  # too many args - test helper functions
    "PLR2004",  # magic values - acceptable in tests
    "PLW0108",  # lambda - acceptable in tests
    "TC003",    # Generator needed at runtime for pytest fixtures
    "F401",     # unused imports - TYPE_CHECKING usage
    "DTZ005",   # datetime without timezone - test mocks
    "FURB162",  # timezone replacement - test code
]

"components/**/tests/**/*.py" = [
    "S101",
    "D102",
    "D103",
    "ANN",
    "SLF001",
    "INP001",
    "S105",
    "S106",
    "S108",
    "S603",
    "ARG001",
    "ARG002",
    "ARG005",
    "TRY300",
    "BLE001",
    "PLC0415",
    "PLR0913",
    "PLR2004",
    "PLW0108",
    "TC003",
    "F401",
    "DTZ005",
    "FURB162",
]

"**/gcp_client_impl/**/*.py" = [
    "ANN401",   # Any typing - external Google Cloud library objects without complete stubs
]

"**/cloud_storage_service/**/*.py" = [
    "ANN401",   # Any typing - FastAPI request/response objects
    "PLC0415",  # import inside function - intentional for circular-import avoidance
    "E402",     # module import not at top - intentional after env setup
    "S105",     # possible hardcoded password - false positive for URLs/constants
    "ARG001",   # unused function argument - FastAPI exception handler signature
    "TRY301",   # abstract raise - FastAPI error handling pattern
    "PLR2004",  # magic value in comparison - HTTP status codes
    "DTZ005",   # datetime without timezone - acceptable for API responses
    "TC003",    # move into type-checking block - runtime usage in Pydantic
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ============================================================================
# MyPy — strict mode
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
warn_unused_ignores = true
ignore_missing_imports = false
exclude = [
    "components/cloud_storage_service_api_client/.*",
]
mypy_path = [
    "components/ai_client_api/src",
    "components/chat_client_wrapper/src",
    "components/cloud_storage_adapter/src",
    "components/cloud_storage_service/src",
    "components/cloud_storage_service_api_client",
    "components/gcp_client_impl/src",
    "components/gemini_ai_client_impl/src",
]

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "google.auth.*",
    "google.oauth2.*",
    "google.api_core.*",
    "google.genai",
    "google.genai.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["chat_client_api", "chat_client_api.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["slack_sdk", "slack_sdk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["prometheus_client", "prometheus_client.*"]
ignore_missing_imports = true

# Pytest fixtures don't require typed decorators
[[tool.mypy.overrides]]
module = ["tests.*", "components.*.tests.*"]
disallow_untyped_decorators = false

# Auto-generated OpenAPI client: incomplete type annotations
[[tool.mypy.overrides]]
module = [
    "cloud_storage_service_api_client.*",
    "components.cloud_storage_service_api_client.*",
]
ignore_errors = true

# slack_adapter subclasses ChatClient (which becomes Any due to ignore_missing_imports above)
[[tool.mypy.overrides]]
module = [
    "cloud_storage_service.slack_adapter",
    "components.cloud_storage_service.slack_adapter",
]
disallow_subclassing_any = false

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
pythonpath = [
    ".",
    "components/ai_client_api/src",
    "components/chat_client_wrapper/src",
    "components/cloud_storage_adapter/src",
    "components/cloud_storage_service/src",
    "components/cloud_storage_service_api_client",
    "components/gcp_client_impl/src",
    "components/gemini_ai_client_impl/src",
]
testpaths = ["tests/e2e", "tests/integration", "components/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=components/ai_client_api/src/",
    "--cov=components/chat_client_wrapper/src/",
    "--cov=components/cloud_storage_adapter/src/",
    "--cov=components/cloud_storage_service/src/",
    "--cov=components/gcp_client_impl/src/",
    "--cov=components/gemini_ai_client_impl/src/",
    "--cov-report=term-missing",
]

markers = [
    "unit: Unit tests (fast, isolated, mocked)",
    "integration: Integration tests (medium speed, real dependencies)",
    "e2e: End-to-end tests (slow, full system with real APIs)",
    "slack_integration: Tests requiring Slack integration (real or mocked Slack SDK)",
    "circleci: Tests runnable in CI without local credential files",
    "local_credentials: Tests requiring a local service account key file",
]

# ============================================================================
# Coverage
# ============================================================================
[tool.coverage.run]
branch = true
source = [
    "components/ai_client_api/src",
    "components/chat_client_wrapper/src",
    "components/cloud_storage_adapter/src",
    "components/cloud_storage_service/src",
    "components/gcp_client_impl/src",
    "components/gemini_ai_client_impl/src",
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "components/cloud_storage_service_api_client/**/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*pass\\s*$",
    "@abstractmethod",
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "components/cloud_storage_service_api_client/**/*",
]