[project]
name = "ai-client-api"
version = "0.1.0"
description = "Abstract interface for AI client implementations with tool calling"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0,<9.0.0",
	"pytest-cov>=6.0.0,<7.0.0",
	"mypy>=1.0.0,<2.0.0",
	"ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_client_api"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
	"--strict-markers",
	"--strict-config",
	"-ra",
	"--tb=short",
]
markers = [
	"unit: unit tests with mocked dependencies",
]