[project]
name = "cloud-storage-adapter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cloud-storage-client-api",
    "cloud-storage-service-api-client",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_storage_adapter"]

[tool.uv.sources]
cloud-storage-client-api = { workspace = true }
cloud-storage-service-api-client = { workspace = true }
