[project]
name = "cloud-storage-adapter"
version = "0.1.0"
description = "HTTP adapter for cloud storage operations"
requires-python = ">=3.12"
dependencies = [
    "cloud-storage-api",
    "cloud-storage-service-api-client",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_storage_adapter"]

[tool.uv.sources]
cloud-storage-api = { git = "https://github.com/2SpaceMasterRace/ospsd-cloud-storage.git", tag = "v1.0.0" }
cloud-storage-service-api-client = { workspace = true }
