[project]
name = "cloud-storage-adapter"
version = "0.1.0"
description = "HTTP adapter for cloud storage operations"
requires-python = ">=3.12"
dependencies = [
    "cloud-storage-api",
    "cloud-storage-service-api-client",
    "httpx>=0.26.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_storage_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers"
markers = [
    "unit: unit tests with mocked dependencies",
    "integration: integration tests against live cloud storage service",
]
