[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-storage-service"
version = "1.0.0"
description = "FastAPI service for cloud storage operations with OAuth 2.0 authentication"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.7",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "google-cloud-storage>=2.14.0",
    "google-auth>=2.27.0",
    "gcp-client-impl",
    "cloud-storage-api",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_storage_service"]

[tool.uv.sources]
cloud-storage-api = { git = "https://github.com/2SpaceMasterRace/ospsd-cloud-storage.git", tag = "v1.0.0" }
gcp-client-impl = { workspace = true }

