[project]
name = "cloud-storage-service-api-client"
version = "0.1.0"
description = "Generated API client for Cloud Storage Service"
requires-python = ">=3.12"
dependencies = [
    "attrs>=23.1.0",
    "httpx>=0.23.1",
    "python-dateutil>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloud_storage_service_api_client"]
