[project]
name = "gcp-client-impl"
version = "0.1.0"
description = "GCP implementation of cloud storage client interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloud-storage-client-api",
    "google-cloud-storage>=2.10.0",
    "google-auth>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_client_impl"]

[tool.hatch.build.targets.wheel.force-include]
"src/gcp_client_impl/py.typed" = "gcp_client_impl/py.typed"