[project]
name = "gcp-client-impl"
version = "0.1.0"
description = "GCP Cloud Storage implementation for cloud-storage-api"
requires-python = ">=3.12"
dependencies = [
    "cloud-storage-api",
    "google-auth>=2.0.0,<3.0.0",
    "google-cloud-storage>=2.10.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "mypy>=1.17.0",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_client_impl"]

[tool.uv.sources]
cloud-storage-api = { git = "https://github.com/2SpaceMasterRace/ospsd-cloud-storage.git", tag = "v1.0.0" }


# ============================================================================
# Pytest
# ============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=gcp_client_impl",
    "--cov-report=term-missing",
]
markers = [
    "unit: unit tests with mocked dependencies",
    "integration: tests that exercise real clients with stubbed transports",
]


# ============================================================================
# Coverage
# ============================================================================

[tool.coverage.run]
branch = true
source = ["gcp_client_impl"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


# ============================================================================
# MyPy — strict mode
# ============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "google.cloud.storage"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.storage.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.api_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.oauth2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.auth.*"
ignore_missing_imports = true


# ============================================================================
# Ruff — hyper-strict linting
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",     # one-blank-line-before-class (conflicts with D211)
    "D213",     # multi-line-summary-second-line (conflicts with D212)
    "COM812",   # trailing-comma-missing (conflicts with formatter)
    "ISC001",   # single-line-implicit-string-concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # asserts are expected in tests
    "PLR2004",  # magic numbers are fine in tests
    "ANN201",   # tests don't need return type annotations
    "D",        # tests don't need full docstring coverage
    "SLF001",   # tests can access private members for boundary verification
    "S105",     # hardcoded "passwords" in tests are fixtures
    "S106",     # hardcoded function-arg "secrets" in tests are fixtures
    "S108",     # /tmp paths in tests are not security risks
    "INP001",   # tests/ has no __init__.py - not a package in pytest
]

[tool.ruff.lint.pydocstyle]
convention = "google"
